feat: use Tailwind CSS and improve code quality.

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,10 @@
     font-family: 'Noto Sans TC', sans-serif;
 }
 
-.hl {
+.app {
+    min-height: 100vh;
+}
+
+.highlight {
     background-color: #FFEF78;
 }
